<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/okapi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onViewPressed"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/problem1num"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/okapi_num"
                android:textAppearance="@android:style/TextAppearance.Material.Display1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/problem1name"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/okapi_name"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/vowel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onViewPressed"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/problem2num"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/vowel_num"
                android:textAppearance="@android:style/TextAppearance.Material.Display1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/problem2name"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/vowel_name"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/carry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onViewPressed"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/problem3num"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/carry_num"
                android:textAppearance="@android:style/TextAppearance.Material.Display1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/problem3name"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/carry_name"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/boxes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onViewPressed"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/problem4num"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/boxes_num"
                android:textAppearance="@android:style/TextAppearance.Material.Display1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/problem4name"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/boxes_name"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/wealth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onViewPressed"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/problem5num"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/wealth_num"
                android:textAppearance="@android:style/TextAppearance.Material.Display1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/problem5name"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/wealth_name"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/faro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onViewPressed"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/problem6num"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/faro_num"
                android:textAppearance="@android:style/TextAppearance.Material.Display1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/problem6name"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/faro_name"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/back_forth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onViewPressed"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/problem7num"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/back_forth_num"
                android:textAppearance="@android:style/TextAppearance.Material.Display1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/problem7name"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/back_forth_name"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/chain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onViewPressed"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/problem8num"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/greatest_num"
                android:textAppearance="@android:style/TextAppearance.Material.Display1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/problem8name"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/greatest_name"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/prime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onViewPressed"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/problem9num"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/prime_num"
                android:textAppearance="@android:style/TextAppearance.Material.Display1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/problem9name"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/prime_name"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/remain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onViewPressed"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/problem10num"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/lrr_num"
                android:textAllCaps="false"
                android:textAppearance="@android:style/TextAppearance.Material.Display1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/problem10name"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/lrr_name"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>